<resources>
    <string name="app_name">Lab1</string>
    <string name="send_notification">Send notification</string>
    <string name="search_with_google">Search with Google</string>
    <string name="start_search">Start search</string>
    <string name="front_camera">Front camera</string>
    <string name="back_camera">Back camera</string>
    <string name="launch">Launch</string>
    <string name="please_make_choice">Please, make choice</string>
    <string name="check_photo">check photo</string>
    <string name="first_operand">First operand</string>
    <string name="second_operand">Second operand</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="div">/</string>
    <string name="result">Result:</string>
    <string name="calculator">Calculator</string>
</resources>
